lattests/bad/my_tests/test_return_in_if_not_in_else.lat
int a() {
    return 5;
}

int main() {
    if (a() == 5) {
        printInt(1);
        return 0;
    }
    else {
        printString("error");
    }
}