lattests/bad/my_tests/test_return_in_if_not_in_else.err
ERROR

Semantic error at line 5 :
     Function main without return.
